--- a/index.html
+++ b/index.html
@@ -49,16 +49,16 @@
 </head>
 <body>
     <header>
-        <img src="/api/placeholder/150/150" alt="Tu foto" id="foto">
-        <h1>Tu Nombre</h1>
+        <img src="/api/placeholder/150/150" alt=C:\Users\Administrador\Downloads\foto id="foto">
+        <h1>Cesar Leonardo Gijon Guerrero</h1>
     </header>
 
     <div class="container">
         <section id="info-personal">
             <h2>Información Personal</h2>
             <p>Email: tu@email.com</p>
-            <p>Teléfono: +1234567890</p>
-            <p>Ubicación: Tu Ciudad, País</p>
+            <p>Teléfono: +573043007525</p>
+            <p>Ubicación: BOGOTA, COLOMBIA</p>
         </section>
 
         <section id="objetivo">
